<resources>
    <string name="app_name">BILNU</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bilnu_obd2_scanner">BILNU OBD2 SCANNER</string>
    <string name="pantalla_de_inicio">Pantalla de inicio</string>
    <string name="conectar">CONECTAR</string>
    <string name="imagen_inicio">Imagen inicio</string>
    <string name="estado">Estado:</string>
    <string name="datos_en_tiempo_real">Datos en tiempo real</string>
    <string name="imagen_boton_conectar">imagen boton conectar</string>
    <string name="BILNU_aboutFragment">BILNU OBD2 <br />SCAN SCANNER</string>
    <string name="version">Version 0.1</string>
    <string name="aboutFragment">BILNU es una aplicación diseñada para <br />
        crear una conexión Bluetooth por medio <br />
        de tu dispositivo movil y un dispositivo <br />
        OBD2 compatible.
    </string>
    <string name="aboutFrame_2">Diseñada por y para desarrolladores que <br />
        requieran una inmensión mayor al tema.
    </string>
    <string name="aboutFrame_3">¡Gracias por usar la app!, tu feedback es <br />
        importante, contactacnos en:
    </string>
    <string name="aboutFrame_4">BILNU@contacto.com</string>
    <string name="aboutFrame_5">App 100% Mexicana ¡Apoyamos el Open <br />
        Source!
    </string>
    <string name="bluetooth">Bluetooth</string>
    <string name="como_conectar">Como conectar</string>
    <string name="tema_oscuro">Tema oscuro</string>
    <string name="apagado">APAGADO</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_comm_service">CommService</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_discover_device">discoverDevice</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting</string>
    <string name="title_not_connected">not connected</string>
    <string name="title_connected_to">connected to</string>

    <string name="developedby">OBD2 V 0.1</string>

    <string name="waiting_for_obd">Waiting for paired OBD adapter</string>
    <string name="connecting_to_ecu">Connecting to ECU</string>
    <string name="obd2_adapter_not_responding">The OBD adapter is not responding</string>
    <string name="obd_connected">OBD Connected</string>
    <string name="connect_lost">Connect Lost</string>

    <!--these string not available in Arabic-->
    <string name="fuel_type_not_supported">Sensor de combustible no disponible"</string>
    <string name="searching_protocol">Buscando protocolo"</string>
    <string name="searching_supported_sensor">Searching supported sensors."</string>
    <string name="feedback_content_cant_less_than_5">Feedback text cannot be less than 5 characters.</string>
    <string name="image_request_failed">Failed to process image.</string>
    <string name="track_not_available">Track not available.</string>
    <string name="accept_permission_for_location">You will not receive location until accept location permission.</string>
    <string name="accept_permission_in_app_settings">You will not receive location until accept location permission in Settings-Apps-TeCar-HeadUnit-Permissions.</string>
    <string name="syncing_not_completed_yet">Trip location not synced yet. Please check internet connection and wait...</string>
    <string name="unable_to_connect">Unable to connect with ECU.</string>

    <string name="bluetooth_unsupported">Device does not support bluetooth.</string>
    <string name="maf_not_supporte">Fuel related sensors not available, you will not receive Fuel consumption and Cost.</string>
    <string name="engine_time_not_supported">Run time since engine start not supported."</string>
</resources>